Enhance email analysis bot infrastructure checks